--- a/Scaling_training.qmd
+++ b/Scaling_training.qmd
@@ -10,7 +10,11 @@ You have to consider feasibility. Today (March 2025), the Dutch national compute
 
 ## Smart Architectures
 
-In Chapter 4, we studied smarter, DNA-specific model architectures. The GPN model inspired by @Benegas2024 we introduced can blow away a standard BERT in an hour of training on my 2022 MacBook Air (the BERT we trained and compared to our GPN-BERT trained for ±8 hours on a strong GPU). The massive efficiency gain may mean you can beat the 7B BERT-like model we took as an example of compute costs with a fraction of the compute! Other researchers have designed alternatives for the transformer module at the core of these models with DNA in mind and expanded its context window up to 1 million bases with far less compute [@nguyen2023]. These models can be mixed and matched for further gains.
+In Chapter 4, we studied smarter, DNA-specific model architectures. The GPN model inspired by @Benegas2024 we introduced can blow away a standard BERT in an hour of training on my 2022 MacBook Air (the BERT we trained and compared to our GPN-BERT trained for ±8 hours on a strong GPU). The massive efficiency gain may mean you can beat the 7B BERT-like model we took as an example of compute costs with a fraction of the compute! As briefly remarked on in Chapter 6 reseachers have designed alternatives for the transformer module in order to expand its context window up to 1 million bases, with far less compute reuirement than the transformer [@nguyen2023]. If you are to design and run you own model, it may pay off to consider implementing some of these optimisations.
+
+## Focus on a specific question
+
+Ist is tempting to train a model on all DNA known to man, but honestly, there is actully more of that then peopel an even beginn to train on. The models disucssed so far ofeten train on the reference seqeucnes, a sort of modal genome, but indiviual people's genomes are different from that references. YOu culd consider thousands of species, or (tens/hundreds of) thousands of individual genomes. That would require a lot of bioinformatcs. You'd have to phase the genomes to untangle the maternal and paternal strnd, youd hae to decided whether you want to get rid of the reference entirely and build a specific reference/genome for eah individual, you migh require some reference, or a graph genome? It's also worth considering whether your task really requires the whole genome. Are you performing gene centric tasks (mutation consequence prediction, gene expresssion prediction, alternative splice modeling)? If your speciic tasks dont requre the whole genome, why not consider traning on coding sequences only or genes and a few thousand bases around them? 
 
 ## Optimize, Optimize, Optimize
 
