--- a/Chapter6_DNA.qmd
+++ b/Chapter6_DNA.qmd
@@ -3,7 +3,7 @@ title: "A Review of Current DNA Language Models"
 format: html
 ---
 
-This is not an academic review, those are far more comprehencive, see for example @benegas2025.
+This is not an academic review, those are obviously far more comprehensive, see @benegas2025 for a review I really liked.
 
 **1. Modeling Paradigm:**\
 As we leared in the first 5 chapters, gLMs (genomic Language Models) borrow from natural language processing by treating DNA sequences as “text” composed of four characters (A, C, G, T). Early models used k-mer tokenization (e.g., DNABERT), but newer approaches experiment with both nucleotide‐level and subword tokenizations (such as 3-mer or 6-mer) to better capture biological semantics.
