--- a/Chapter6_DNA.qmd
+++ b/Chapter6_DNA.qmd
@@ -22,7 +22,7 @@ Below is a summary table of several prominent DNA language models eith innovativ
 | **DNABERT** | A transformer-based model that learns bidirectional representations from DNA sequences using k-mer tokenization. | [DNABERT Paper](https://doi.org/10.1093/bioinformatics/btab083) | [GitHub](https://github.com/jerryji1993/DNABERT) |
 | **Nucleotide Transformer (NT‑v2)** | A large transformer pretrained on massive human genomic data to learn robust DNA representations for various downstream tasks. | [Nucleotide Transformer v2](https://doi.org/10.1038/s41592-024-02523-z) | [GitHub](https://github.com/instadeepai/nucleotide-transformer)/[HuggingFace](https://huggingface.co/collections/InstaDeepAI/nucleotide-transformer-65099cdde13ff96230f2e592) |
 | **GPN** | The Genomic Pre-trained Network that leverages unsupervised DNA language modeling to predict genome-wide variant effects. | [GPN Paper (PNAS 2023)](https://doi.org/10.1073/pnas.2311219120) | [GitHub](https://github.com/songlab-cal/gpn) |
-| GNA-MSA | The Genomic Pre-trained Network that leverage multiple sequenece alignment across species to develop specialized evolution aware token embedding. | [GPN-MSA preprint](https://pubmed.ncbi.nlm.nih.gov/37873118/) | [GitHub](https://github.com/songlab-cal/gpn) |
+| **GPN-MSA** | The Genomic Pre-trained Network that leverage multiple sequenece alignment across species to develop specialized evolution aware token embedding. | [GPN-MSA preprint](https://pubmed.ncbi.nlm.nih.gov/37873118/) | [GitHub](https://github.com/songlab-cal/gpn) |
 | **HyenaDNA** | A long-range genomic language model operating at single-nucleotide resolution using Hyena’s implicit convolutional approach to overcome transformer scaling issues. | [HyenaDNA (arXiv)](https://arxiv.org/abs/2306.15794) | [GitHub](https://github.com/HazyResearch/hyena-dna) |
 | **HybriDNA** | A hybrid model combining Transformer and Mamba2 (state-space) architectures for efficient long-range DNA modeling. | [HybriDNA (arXiv)](https://arxiv.org/abs/2502.10807) |  |
 | **Omni‑DNA** | A unified genomic foundation model that supports cross‑modal and multi‑task learning across a wide range of genomic applications. | [Omni‑DNA (arXiv)](https://arxiv.org/abs/2502.03499) | [Hugging Face Collection](https://huggingface.co/collections/zehui127) |
