more updates to training chapter

--- a/references.bib
+++ b/references.bib
@@ -163,3 +163,12 @@
 	doi = {10.48550/ARXIV.2306.15794},
 	url = {https://arxiv.org/abs/2306.15794}
 }
+
+@article{geiping2022,
+	title = {Cramming: Training a Language Model on a Single GPU in One Day},
+	author = {Geiping, Jonas and Goldstein, Tom},
+	year = {2022},
+	date = {2022},
+	doi = {10.48550/ARXIV.2212.14034},
+	url = {https://arxiv.org/abs/2212.14034}
+}
