--- a/Preamble1.qmd
+++ b/Preamble1.qmd
@@ -1,12 +1,14 @@
 # What is this Book About? {.unnumbered}
 
-This book is me trying to keep up with the current state of the art in ML for biology, with an initial focus on language models. When studying the latest hyped tools, it's good to resist the temptation to be awed by the models. Some are great, and it can feel magical to see an unsupervised model pick up important biological signals and be very predictive by only processing sequence data! However, the current state of the art in biology, genetics especially, is remarkable—we know a lot about the genome, about how DNA is transcribed into RNA and then proteins, which proteins are conserved across evolution (i.e., essential for all life). So throughout, we have to keep in mind that in some domains, while it may feel (and actually be) remarkable that a language model picks up fundamental biology just from processing data, it might not be state of the art or even close to it.
+This book is me trying to keep up with the current state of the art in ML for biology, with an initial focus on language models, tohugh more acurately all models we discuss are "attention" models. The fundemental goal of these models is to learn the dependencies (the joint probability distribution) between elements in a sequence (a DNA or protein sequences) or a 2d field (an image or a protein contact map) or 3d structure (the full protein structure for example). 
+
+When studying the latest hyped tools, it's good to resist the temptation to be awed by the models. Some are great, and it can feel magical to see an unsupervised model pick up important biological signals and be very predictive by only processing sequence data! However, the current state of the art in biology, genetics especially, is remarkable—we know a lot about the genome, about how DNA is transcribed into RNA and then proteins, which proteins are conserved across evolution (i.e., essential for all life). So throughout, we have to keep in mind that in some domains, while it may feel (and actually be) remarkable that a language model picks up fundamental biology just from processing data, it might not be state of the art or even close to it.
 
 ## A Brief Glossary of ML Model Types
 
 **Supervised machine learning** is a type of machine learning where a model learns to make predictions based on examples that come with known answers, or "labels." In biology, this could mean training a model to predict whether a DNA sequence comes from a healthy or diseased tissue, or identifying which species a DNA sample belongs to. The model sees many examples where the input (the DNA sequence) is paired with the correct output (the label, like "healthy" or "diseased"), and learns to find patterns that link the two. Supervised learning is very powerful when we have lots of high-quality labeled data, but in biology, obtaining these labels can be expensive, time-consuming, and sometimes even impossible if we don't know the "right answer" in advance.
 
-**Unsupervised machine learning**, in contrast, is used when we don't have labels—the model only sees the raw data and has to find patterns on its own. This is especially useful in biology when exploring large datasets where the structure isn't fully understood, such as grouping similar cells in single-cell RNA sequencing or discovering new subtypes of proteins. In the case of **biological language models**, the "language" is made up of sequences like DNA, RNA, or proteins. Unsupervised models, such as transformers trained on genome sequences, learn the "grammar" and "vocabulary" of these biological molecules just by seeing lots of sequences, without being told what they mean. This allows them to uncover hidden rules of biology, like which sequences are likely to code for stable proteins or which mutations might disrupt function.
+**Unsupervised machine learning**, in contrast, is used when we don't have labels—the model only sees the raw data and has to find patterns on its own. This is especially useful in biology when exploring large datasets where the structure isn't fully understood, such as grouping similar cells in single-cell RNA sequencing or discovering new subtypes of proteins. In the case of **biological language models**, the "language" is made up of sequences like DNA, RNA, or proteins. Unsupervised models, such as transformers trained on genome sequences, learn the "grammar" and "vocabulary" of these biological molecules just by seeing lots of sequences, without being told what they mean. This allows them to uncover hidden rules of biology, like which sequences are likely to code for stable proteins or which mutations might disrupt function. 
 
 Biological language models have become particularly important because DNA, RNA, and proteins all follow sequential, language-like patterns—just as words form sentences, nucleotides form genes, and amino acids form proteins. By training on vast amounts of biological data in an unsupervised way, these models can learn useful representations of biological sequences, even without human-provided labels. Researchers can then use these pretrained models for many downstream tasks, such as predicting gene function, identifying regulatory regions, or studying how genetic variation might affect disease—combining the power of unsupervised learning to understand biology's "language" with supervised learning for more targeted, disease-specific predictions.
 
